<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GravityBox [NG]</string>
    <string name="battery_style_title">Battery indicator style</string>
    <string name="battery_style_stock">Stock battery indicator</string>
    <string name="battery_style_circle">Circle battery</string>
    <string name="battery_style_circle_percent">Circle battery with percentage</string>
    <string name="battery_style_none">None</string>
    <string name="vol_music_controls_title">Volume keys skip track</string>
    <string name="vol_music_controls_summary">Skip tracks on volume keys long-press while screen is off</string>
    <string name="low_battery_warning_policy_title">Low battery warning</string>
    <string name="low_battery_warning_default">Default</string>
    <string name="low_battery_warning_nonintrusive">Non-intrusive</string>
    <string name="low_battery_warning_off">Off</string>
    <string name="reboot_required">Change will be applied after reboot</string>
    <string name="poweroff_advanced_title">Advanced reboot menu</string>
    <string name="poweroff_advanced_summary">Enables advanced reboot menu with options to reboot to recovery</string>
    <string name="poweroff_recovery">Recovery</string>
    <string name="poweroff_bootloader">Bootloader</string>
    <string name="vol_key_cursor_control_title">Volume key cursor control</string>
    <string name="vol_key_cursor_control_summary">Controls cursor using volume keys in text fields</string>
    <string name="vol_key_cursor_control_off">Disabled</string>
    <string name="vol_key_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="vol_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="recents_clear_all_title">Clear all recent tasks</string>
    <string name="important">Important</string>
    <string name="caller_fullscreen_photo_title">Fullscreen caller photo</string>
    <string name="quick_settings_sync_on">Sync On</string>
    <string name="quick_settings_sync_off">Sync Off</string>
    <string name="quick_settings_torch_on">Torch On</string>
    <string name="quick_settings_torch_off">Torch Off</string>
    <string name="quick_settings_qr_playing">Playing&#8230;</string>
    <string name="quick_settings_qr_recording">Recording&#8230;</string>
    <string name="quick_settings_qr_recorded">Recorded</string>
    <string name="quick_settings_qr_record">Long Press to Record</string>
    <string name="quick_settings_qr_recording_notif">Touch to stop recording</string>
    <string name="quick_settings_expanded_desktop_disabled">Disabled</string>
    <string name="quick_settings_expanded_desktop_normal">Normal</string>
    <string name="quick_settings_expanded_desktop_expanded">Expanded</string>
    <string name="quick_settings_stay_awake_on">Stay Awake On</string>
    <string name="quick_settings_nfc_on">NFC On</string>
    <string name="quick_settings_nfc_off">NFC Off</string>
    <string name="quick_settings_usb_tether_off">Disconnected</string>
    <string name="quick_settings_usb_tether_connected">Tethering Off</string>
    <string name="quick_settings_usb_tether_on">Tethering</string>
    <string name="quick_settings_music_play">Play</string>
    <string name="quick_settings_music_pause">Pause</string>
    <string name="quick_settings_smart_radio_on">Smart Radio On</string>
    <string name="quick_settings_smart_radio_off">Smart Radio Off</string>
    <string name="quick_settings_lock_screen_on">Lock Screen On</string>
    <string name="quick_settings_lock_screen_off">Lock Screen Off</string>
    <string name="quick_settings_location_on">Location</string>
    <string name="quick_settings_location_off">Location Off</string>
    <string name="quick_settings_quiet_hours_off">Quiet Hours Off</string>
    <string name="quick_settings_quiet_hours_on">Quiet Hours On</string>
    <string name="quick_settings_quiet_hours_auto">Quiet Hours Auto</string>
    <string name="quick_settings_quiet_hours_wear">Wear Mode</string>
    <string name="quick_settings_title">Statusbar QuickSettings tiles</string>
    <string name="pref_lc_led_color_title">LED color</string>
    <string name="pref_lc_led_time_on_title">LED On duration</string>
    <string name="pref_lc_led_time_off_title">LED Off duration</string>
    <string name="pref_lc_ongoing_title">Ongoing</string>
    <string name="pref_lc_ongoing_summary">Applies also to ongoing notifications when enabled</string>
    <string name="pref_cat_lc_lights_title">Lights</string>
    <string name="pref_cat_lc_other_title">Other settings</string>
    <string name="pref_cat_lc_sounds_title">Sounds</string>
    <string name="pref_cat_lc_vibrations_title">Vibrations</string>
    <string name="pref_lc_notif_sound_override_title">Override notification sound</string>
    <string name="pref_lc_notif_sound_title">Notification sound</string>
    <string name="pref_lc_notif_sound_only_once_title">Alert only once</string>
    <string name="pref_lc_notif_sound_only_once_summary">When enabled, the sound and/or vibration won\'t play in case notification already exists</string>
    <string name="pref_lc_notif_insistent_title">Insistent</string>
    <string name="pref_lc_notif_insistent_summary">When enabled, audio will be repeated until the notification is cancelled or the notification window is opened</string>
    <string name="pref_lc_vibrate_override_title">Override vibrations</string>
    <string name="pref_lc_vibrate_pattern_title">Vibration pattern</string>
    <string name="pref_lc_vibrate_pattern_summary">Comma separated list of off/on duration pairs in milliseconds. Set to 0 to disable vibrations.</string>
    <string name="lc_activity_menu_default_settings">Default settings</string>
    <string name="pref_lc_default_settings_summary">When on, default settings apply automatically to all applications that have no active explicit settings</string>
    <string name="lc_active_screen">Active Screen</string>
    <string name="lc_quiet_hours">Quiet hours</string>
    <string name="pref_lc_qh_enabled_title">Enable quiet hours</string>
    <string name="pref_lc_qh_enabled_summary">Mutes sounds/vibrations and optionally LED for
        all notifications arriving within defined time range</string>
    <string name="pref_lc_qh_start_title">Start time</string>
    <string name="pref_lc_qh_end_title">End time</string>
    <string name="pref_lc_qh_mute_led_title">Mute lights</string>
    <string name="pref_lc_led_mode_title">LED mode</string>
    <string name="pref_lc_qh_statusbar_icon_title">Status bar icon</string>
    <string name="pref_lc_qh_statusbar_icon_summary">Shows icon in status bar during quiet hours</string>
    <string name="pref_lc_qh_cat_weekdays_title">Week days</string>
    <string name="pref_lc_qh_cat_weekend_title">Weekend</string>
    <string name="pref_lc_qh_ignore_title">Ignore Quiet hours</string>
    <string name="pref_lc_qh_ignore_list_title">For specific keywords</string>
    <string name="pref_lc_qh_ignore_list_summary">Comma separated list of keywords for which to ignore
        Quiet hours. Leave empty for all notifications.</string>
    <string name="increasing_ring_enable">Enable</string>
    <string name="increasing_ring_min_volume_title">Ringing start volume</string>
    <string name="increasing_ring_volume_notice">Notice:\nAs the start volume is set higher than the ringer volume, the ring tone will be played using the ringer volume.</string>
    <string name="increasing_ring_ramp_up_duration_title">Ramp-up duration</string>
    <string name="pref_lc_notif_sound_only_once_timeout_title">Within time interval</string>
    <string name="pref_lc_qh_mute_vibe_title">Mute notification vibrations</string>
    <string name="pref_lc_qh_mute_vibe_summary">Turns off notification vibrations on this device and
        any paired Android Wear device</string>
    <string name="pref_lc_qh_interactive_title">Interactive mode</string>
    <string name="pref_lc_qh_interactive_summary">Always keeps notifications quiet during user interaction
        (respecting per app ignore rules)</string>
    <string name="pref_lc_headsup_mode_title">Heads up mode</string>
    <string name="pref_heads_up_timeout_title">Timeout</string>
    <string name="pref_heads_up_timeout_summary">For how long to show notification window. 0 = persistent.</string>
    <string name="pref_cat_lc_heads_up_title">Heads up</string>
    <string name="pref_lc_headsup_dnd_title">Do not disturb</string>
    <string name="pref_lc_headsup_dnd_summary">Won\'t show any heads up while this app is in the foreground</string>
    <string name="pref_lc_active_screen_mode_title">Active Screen mode</string>
    <string name="pref_lc_qh_weekdays_title">Set week days</string>
    <string name="pref_lc_qh_mute_system_sounds_title">Mute system sounds</string>
    <string name="pref_lc_progress_tracking_title">Progress bar tracking</string>
    <string name="pref_lc_progress_tracking_summary">Shows progress bar in status bar for ongoing notifications
        that contain progress bar. Requires Progress bar feature in status bar tweaks to be enabled.</string>
    <string name="pref_cat_lc_visibility_title">Visibility</string>
    <string name="pref_lc_notif_visibility_title">Content visibility</string>
    <string name="pref_lc_notif_visibility_summary">Specifies notification content visibility in secured lock screen.
        Applies only when \"Hide sensitive notification content\" lock screen policy is active</string>
    <string name="pref_lc_sound_vibrate_title">Disable sound to vibration conversion</string>
    <string name="pref_lc_sound_vibrate_summary">Prevents notifications having vibrations turned off from
        being forced to vibrate during vibrate-only ringer mode</string>
    <string name="pref_lc_qh_mute_system_vibe_title">Mute device vibrations</string>
    <string name="pref_lc_qh_mute_system_vibe_summary">Turns off ALL vibrations at system level,
        including notification vibrations on THIS device. Notifications on paired Android Wear device can
        still vibrate in case notification vibrations are enabled.
    </string>
    <string name="menu_tile_dual">Dual mode</string>
    <string name="menu_tile_locked">Show in lock screen</string>
    <string name="menu_tile_locked_only">Only in lock screen</string>
    <string name="menu_tile_secured">Show in secured lock screen</string>
    <string name="pref_lc_vibrate_replace_title">Replace original vibration</string>
    <string name="pref_lc_vibrate_replace_summary">Applies overriden vibration only in case original notification has vibration</string>
    <string name="pref_lc_sound_replace_title">Replace original sound</string>
    <string name="pref_lc_sound_replace_summary">Applies overriden sound only in case original notification has sound</string>
    <string name="pref_lc_notif_visibility_ls_title">Lock screen visibility</string>
    <string name="pref_lc_notif_hide_persistent_title">Hide persistent notifications</string>
    <string name="pref_lc_notif_hide_persistent_summary">Hides all ongoing and other non-clearable notifications
        coming from this app</string>
    <string name="pref_lc_led_dnd_title">Do not disturb</string>
    <string name="pref_lc_led_dnd_summary">Suppresses LED for chosen Do not disturb modes</string>
    <string name="pref_lc_led_dnd_dialog_title">Choose for which Do not disturb modes to keep LED off</string>
    <string name="pref_lc_active_screen_ignore_update_title">Ignore updated notifications</string>
    <string name="pref_lc_active_screen_ignore_update_summary">Won\'t perform Active screen when
        existing notification gets updated</string>
    <string name="pref_lc_led_ignore_update_title">Ignore updated notifications</string>
    <string name="pref_lc_led_ignore_update_summary">Won\'t turn LED back on for existing notification
        already seen by user when it gets updated</string>
</resources>