<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2015 Peter Gregus for GravityBox Project (C3C076@xda)
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/tile_dual"
          android:title="@string/menu_tile_dual"
          android:checkable="true" />
    <item android:id="@+id/tile_locked"
          android:title="@string/menu_tile_locked"
          android:checkable="true" />
    <item android:id="@+id/tile_locked_only"
          android:title="@string/menu_tile_locked_only"
          android:checkable="true" />
    <item android:id="@+id/tile_secured"
          android:title="@string/menu_tile_secured"
          android:checkable="true" />
</menu>
