<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project
     Copyright (C) 2014 Peter Gregus for GravityBox Project (C3C076@xda)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10dip">

        <ImageView android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <CheckBox android:id="@+id/increasing_ring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/increasing_ring_enable"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView android:id="@+id/increasing_ring_min_volume_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/increasing_ring_min_volume_title" />

        <SeekBar android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingLeft="14dip"
                android:paddingRight="14dip" />

        <TextView android:id="@+id/increasing_ring_volume_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/increasing_ring_volume_notice"
                android:paddingTop="8dip"
                android:visibility="gone" />

        <TextView android:id="@+id/increasing_ring_ramp_up_duration_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/increasing_ring_ramp_up_duration_title"
                android:paddingTop="8dip" />

        <Spinner android:id="@+id/increasing_ring_ramp_up_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/increasing_ring_ramp_up_duration_title"
                android:entries="@array/increasing_ring_ramp_up_duration_entries"
                android:paddingTop="6dip"
                android:paddingBottom="6dip" />

    </LinearLayout>

</ScrollView>
